force-app/main/default/objects/ssot__PromotionEngagement__dlm/fields/ssot__IsPageView__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPageView__c</fullName>
    <label>Is Page View</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPageView</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>