force-app/main/default/objects/ssot__PromotionEngagement__dlm/fields/ssot__PromotionObjectId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PromotionObjectId__c</fullName>
    <label>Promotion Object Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PromotionObjectId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>