force-app/main/default/objects/ssot__PromotionEngagement__dlm/fields/ssot__rel_1732260213250_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260213250_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionEngagement_EngagementChanne_rel</label>
    <referenceTo>ssot__EngagementChannelAction__dlm</referenceTo>
    <relationshipLabel>PromotionEngagement_EngagementChanne_rel</relationshipLabel>
    <relationshipName>rel_1732260213250_end</relationshipName>
    <type>Lookup</type>
</CustomField>