force-app/main/default/objects/ssot__PromotionEngagement__dlm/fields/ssot__rel_1732260216551_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260216551_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionEngagement_UtmId_map_Campai_rel</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>PromotionEngagement_UtmId_map_Campai_rel</relationshipLabel>
    <relationshipName>rel_1732260216551_end</relationshipName>
    <type>Lookup</type>
</CustomField>