force-app/main/default/objects/ssot__PromotionEngagement__dlm/fields/ssot__rel_1732260238752_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1732260238752_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PromotionEngagement_IndividualId_map_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>PromotionEngagement_IndividualId_map_rel</relationshipLabel>
    <relationshipName>rel_1732260238752_end</relationshipName>
    <type>Lookup</type>
</CustomField>